fireresist boss give the effect each 5 ticks so the effect can last for 1 sec (#2597)